<resources>
    <string name="app_name">Korito Matrix Scorer</string>
    <string name="start">Start</string>
    <string name="started">Started:</string>
    <string name="finished">Finished:</string>
    <string name="plusSign">+</string>
    <string name="dabText">Dab(s):</string>
    <string name="finalise">Finalise</string>
    <string name="back">Back</string>
    <string name="hh_mm_ss">hh:mm:ss</string>
    <string name="time_format">%1$02d:%2$02d:%3$02d.%4$03d</string>

    <!-- Preference Titles -->
    <string name="network_header">Network</string>
    <string name="user_header">User</string>
    <string name="host_address">IP address or Hostname of Server</string>

    <!-- Messages Preferences -->
    <string name="observer_name">Observer Name</string>
    <string name="refresh_title">Refresh timeout</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">K.T.M. Settings</string>
    <string name="finish">FINISH</string>
</resources>