<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity4FinishBike">

    <TextView
        android:id="@+id/number4Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number"
        android:textSize="@dimen/textSizeBikeNumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/marginTopToNumber"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/name4Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textSize="@dimen/textSizeRiderName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/number4Text"
        android:layout_marginTop="@dimen/marginNumberToName"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/bike4Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bike"
        android:textSize="@dimen/textSizeBike"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/name4Text"
        android:layout_marginTop="@dimen/marginNameToBike"
        tools:ignore="HardcodedText" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierAboveTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="bike4Text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftColumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />

    <TextView
        android:id="@+id/startedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/started"
        android:textSize="@dimen/textSizeResults"
        app:layout_constraintStart_toStartOf="@id/leftColumn"
        app:layout_constraintBaseline_toBaselineOf="@+id/startTimeText" />

    <TextView
        android:id="@+id/finishedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished"
        android:textSize="@dimen/textSizeResults"
        app:layout_constraintEnd_toEndOf="@+id/startedText"
        app:layout_constraintBaseline_toBaselineOf="@+id/finishTimeText" />

    <TextView
        android:id="@+id/startTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hh_mm_ss"
        android:textSize="@dimen/textSizeResults"
        android:textColorHint="#757575"
        android:importantForAutofill="no"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@id/startedText"
        app:layout_constraintTop_toBottomOf="@id/barrierAboveTimes"
        app:layout_constraintBottom_toTopOf="@+id/finaliseButton"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/finishTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hh_mm_ss"
        android:textSize="@dimen/textSizeResults"
        android:textColorHint="#757575"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="@+id/startTimeText"
        app:layout_constraintTop_toBottomOf="@+id/startTimeText" />

    <TextView
        android:id="@+id/elapsedTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hh_mm_ss"
        android:textColorHint="#757575"
        android:importantForAutofill="no"
        android:textSize="@dimen/textSizeResults"
        app:layout_constraintStart_toStartOf="@+id/finishTimeText"
        app:layout_constraintTop_toBottomOf="@+id/finishTimeText" />

    <TextView
        android:id="@+id/dabTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hh_mm_ss"
        android:textColorHint="#757575"
        android:importantForAutofill="no"
        android:textSize="@dimen/textSizeResults"
        app:layout_constraintTop_toBottomOf="@+id/elapsedTimeText"
        app:layout_constraintStart_toStartOf="@+id/elapsedTimeText"/>

    <TextView
        android:id="@+id/totalTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hh_mm_ss"
        android:textColorHint="#757575"
        android:importantForAutofill="no"
        android:textSize="@dimen/textSizeResults"
        app:layout_constraintStart_toStartOf="@id/dabTimeText"
        app:layout_constraintTop_toBottomOf="@+id/dabTimeText"/>

    <TextView
        android:id="@+id/plusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/plusSign"
        android:textSize="@dimen/textSizeResults"
        app:layout_constraintBaseline_toBaselineOf="@+id/dabsCountedText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dabsCountedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="10"
        android:textSize="@dimen/textSizeResults"
        app:layout_constraintBaseline_toBaselineOf="@+id/dabText"
        app:layout_constraintStart_toEndOf="@id/plusText"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/dabText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/dabText"
        android:textSize="@dimen/textSizeResults"
        app:layout_constraintBaseline_toBaselineOf="@+id/dabTimeText"
        app:layout_constraintStart_toEndOf="@+id/dabsCountedText" />

    <Button
        android:id="@+id/finaliseButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeightFinalise"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:onClick="submitResults"
        android:text="@string/finalise"
        android:textSize="@dimen/textSizeFinaliseTime"
        android:background="@color/warm_amber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
